# 20251014-matsuzawa

./: pyproject.toml
.github/workflows/: run_full_experiment_with_open_code.yml  run_trial_experiment_with_open_code.yml
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/judge_execution_subgraph/: judge_execution.txt
config/: config.yaml
config/run/: comparative-2-DistilBERT-base-66M-CIFAR-10.yaml  comparative-2-DistilBERT-base-66M-alpaca-cleaned.yaml  comparative-2-MobileNetV2-0.5-3.5M-CIFAR-10.yaml  comparative-2-MobileNetV2-0.5-3.5M-alpaca-cleaned.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
